--- a/rock-paper-scissors/Cargo.toml
+++ b/rock-paper-scissors/Cargo.toml
@@ -3,5 +3,13 @@ name = "rock-paper-scissors"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "rock-paper-scissors"
+path = "src/lib.rs"
+
+[[bin]]
+name = "rock-paper-scissors"
+path = "src/main.rs"
+
 [dependencies]
 rand = "0.8.5"
